second edit, changed a lil bit with the pw page

--- a/pw.html
+++ b/pw.html
@@ -2,8 +2,8 @@
 <style>
 input, select {
 
-    background-color: #35383E;
-    color:#FFA7F6;
+    background-color: #19172C;
+    color:#EC7BF5;
 
     padding: 0.30rem 0.55rem;
     border : 1px solid ;
@@ -26,7 +26,7 @@ h2 {
     <label for="pswd"> </label>
 
     <input type="password" id="pswd">
-    <input style="background-color: #35383E" type="button" value="Continue"  onclick="checkPswd();" />
+    <input style="background-color: #19172C" type="button" value="Continue"  onclick="checkPswd();" />
 </form>
 
 
